# HPCC-Platform

./: CMakeLists.txt  vcpkg-linux.code-workspace  vcpkg.json  vcpkg.json.in
cmake_modules/: commonSetup.cmake
common/thorhelper/: thormeta.cpp  thormeta.hpp
dali/base/: dadfs.cpp
dali/dfuXRefLib/: dfuxreflib.cpp
helm/hpcc/: values.schema.json
helm/hpcc/templates/: _helpers.tpl
initfiles/etc/DIR_NAME/: environment.xml.in
plugins/: CMakeLists.txt
plugins/mongodb/: mongodbembed.cpp  mongodbembed.hpp
plugins/parquet/: CMakeLists.txt  README.md  parquet.ecllib  parquetembed.cpp  parquetembed.hpp  parquethelper.cpp
plugins/parquet/examples/: a.out  blob_test.ecl  large_io.ecl  nested_io.ecl  null_test.ecl  parquet_read_write.ecl  simple_io.ecl
system/jhtree/: ctfile.cpp  ctfile.hpp
system/jlib/: jstring.cpp
testing/regress/: environment.xml.in
vcpkg_overlays/arrow/: portfile.cmake
